selfhost/test/typechecker/bindingdecl/error_illegal_value_type_enum.out
Error at %FILE_NAME%:3:9
Forbidden type for value
  |  val f = Foo
             ^
Expression has type <#enum Foo>, which cannot be used as a value
