selfhost/test/typechecker/bindingdecl/error_illegal_value_type_enum.abra
enum Foo {}

val f = Foo